feat: upgrade to spring boot 3 and spring shell 3